Update 'go-vlombqtl' component image to: quay.io/rhtap_qe/go-vlombqtl:d4c681d82a83805a09f817e2fce8ac14af58461b@sha256:903413e174f6891ee825f5f75b4f525f9a52d44bd684575c229212d16a5cff37

--- a/components/go-vlombqtl/overlays/development/deployment-patch.yaml
+++ b/components/go-vlombqtl/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: go-vlombqtl
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/go-vlombqtl:d4c681d82a83805a09f817e2fce8ac14af58461b@sha256:903413e174f6891ee825f5f75b4f525f9a52d44bd684575c229212d16a5cff37
+          name: container-image
